# web/clui/routes/routesRest.go
@@ -20,7 +20,7 @@ var (
 		"volume":   `/volume/v3`,
 		"compute":  `/compute/v2.1`,
 		"image":    `/image`,
-		"network":  `/network`,
+		"network":  `v2.0/networks`,
 		"identity": `/identity`,
 	}
 )
@@ -45,5 +45,7 @@ func Rest() (m *macaron.Macaron) {
 	//	m.Use(macaron.Renderer())
 	m.Get(resourceEndpoints["identity"], versionInstance.ListVersion)
 	m.Post("/identity/v3/auth/tokens", tokenInstance.IssueTokenByPasswd)
+	//neutron api
+	m.Get(resourceEndpoints["network"], subnetInstance.List)
 	return
 }
