# web/rest-api/swagger.yaml
@@ -1,5 +1,14 @@
 swagger: '2.0'
-info: {title: Cloudland API, version: v3, description: Clandland API to compatible openstack API}
+info:
+  title: Cloudland API compatible openstack API,
+  version: v3,
+  description: Clandland API to compatible openstack API
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  contact:
+    email: spark.liu@cn.ibm.com
+    name: Spark.liu
 paths:
   /identity:
     get:
@@ -91,7 +100,35 @@ paths:
             properties:
               token:
                 $ref: '#/definitions/token'
-
+  /v2.0/networks:
+    get:
+      tags: [neutron]
+      operationId: listNetworks
+      summary: List networks
+      description: |
+        Lists networks to which the specified tenant has access.
+      produces: [application/json]
+      responses:
+        200:
+          description: 200 response
+          headers:
+            Vary:
+              type: string
+              description: X-Auth-Token
+              default: X-Auth-Token
+              enum:
+              - X-Auth-Token
+            Content-Length:
+              type: integer
+            X-Subject-Token:
+              type: string
+          schema:
+            type: object
+            required:
+            - token
+            properties:
+              networks:
+                $ref: '#/definitions/networks'
 definitions:
   token:
     type: object
@@ -174,3 +211,38 @@ definitions:
                 properties:
                   href: {type: string, pattern: '^http(s)?:\/\/([^\/?#]*)([^?#]*)(\?([^#]*))?(#(.*))?$', example: 'http://192.168.10.16/identity/v3/'}
                   rel: {type: string, enum: [self, remote], example: "self"}
+
+  networks:
+   type: array
+   items:
+      type: object
+      properties:
+        admin_state_up: {type: boolean, example: true}
+        availability_zone_hints: {type: array, items: {type: string, example: 'nova'}}
+        availability_zones: {type: array, items: {type: string, example: 'nova'}}
+        created_at: {type: string, format: date-time, example: '2016-03-08T20:19:41'}
+        dns_domain: {type: string, example: 'my-domain.org.'}
+        id: {type: string, format: name, pattern: '^[A-Za-z][-A-Za-z0-9_]*$', example: 'd32019d3-bc6e-4319-9c1d-6722fc136a22'}
+        ipv4_address_scope: {type: string, example: null}
+        ipv6_address_scope:  {type: string, example: null}
+        l2_adjacency: {type: boolean, example: false}
+        mtu: {type: integer, example: 1500}
+        name: {type: string, enum: [stable], pattern: '^[A-Za-z][-A-Za-z0-9_]*$', example: net1}
+        port_security_enabled:  {type: boolean, example: true}
+        project_id: {type: string, format: name, pattern: '^[A-Za-z][-A-Za-z0-9_]*$', example: 4fd44f30292945e481c7b8a0c8908869}
+        qos_policy_id: {type: string, format: name, pattern: '^[A-Za-z][-A-Za-z0-9_]*$', example: '6a8454ade84346f59e8d40665f878b2e'}
+        revision_number: {type: integer, example: 1}
+        router:external: {type: boolean, example: false}
+        shared: {type: boolean, example: false}
+        status: {type: string, enum: ['ACTIVE', 'DISABLE'], example: "ACTIVE"}
+        subnets: {type: array, items: {type: string, pattern: '^[A-Za-z][-A-Za-z0-9_]*$', example: '54d6f61d-db07-451c-9ab3-b9609b6b6f0b'}}
+        tenant_id: {type: string, pattern: '^[A-Za-z][-A-Za-z0-9_]*$', example: '4fd44f30292945e481c7b8a0c8908869'}
+        updated_at: {type: string, format: date-time, example: '2016-03-08T20:19:41'}
+        vlan_transparent: {type: boolean, example: false}
+        description: {type: string, pattern: '^[A-Za-z][-A-Za-z0-9_]*$', example: ''}
+        is_default: {type: boolean, example: false}
+        provider:
+          type: object
+          properties:
+            network_type: {type: string, enum: ['vlan', 'vxlan', 'gre', 'flat'], example: 'vxlan'}
+            segmentation_id: {type: integer, minimum: 0, maximum: 16777215, example: 190190}
